// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkOrButton render a button when "to" is undefined 1`] = `
<a
  className="nav-link "
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  foo
</a>
`;

exports[`LinkOrButton render a link when "to" is set 1`] = `
<a
  className="nav-link "
  href="http://example.com"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  foo
</a>
`;
